[package]
name = "opencl-sys"
version = "0.1.0"
description = "A simple ffi to the OpenCL library"
authors = ["Kerollmops <renault.cle@gmail.com>"]
license = "MIT"

[build-dependencies]
# bindgen = "0.31"
bindgen = { branch = "master", git = "https://github.com/rust-lang-nursery/rust-bindgen.git" }
